--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "main": "Tree.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require @babel/register",
+    "dev": "node ./src/MoveTree.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chess.js": "^0.12.0"
+    "@babel/polyfill": "^7.12.1",
+    "chess.js": "^0.12.0",
+    "core-js": "^3.16.1",
+    "regenerator-runtime": "^0.13.9"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/register": "^7.14.5",
+    "mocha": "^9.0.3"
   }
 }
