--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chessmovetree",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "",
   "main": "Tree.js",
   "type": "module",
@@ -11,28 +11,21 @@
   "author": "pouya.samie@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "chess.js": "^0.12.0",
-    "core-js": "^3.16.1",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-filesize": "^9.1.1",
-    "rollup-plugin-multi-entry": "^2.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-progress": "^1.1.2",
-    "rollup-plugin-uglify": "^6.0.4"
+    "chess.js": "^0.12.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
-    "@babel/plugin-external-helpers": "^7.14.5",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.0",
     "@babel/register": "^7.15.3",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "mocha": "^9.0.3",
-    "rollup": "^1.32.1"
+    "rollup": "^1.32.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-progress": "^1.1.2",
+    "rollup-plugin-uglify": "^5.0.2"
   }
 }
