--- a/package.json
+++ b/package.json
@@ -1,29 +1,35 @@
 {
   "name": "chessmovetree",
-  "version": "0.1.2",
+  "version": "0.2.1",
   "description": "",
-  "main": "Tree.js",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
   "type": "module",
   "scripts": {
     "test": "mocha  --recursive --require @babel/register",
-    "build": "rollup -c --environment INCLUDE_DEPS,BUILD:production"
+    "build": "yarn rollup -c"
   },
   "author": "pouya.samie@gmail.com",
   "license": "ISC",
   "dependencies": {
-    "chess.js": "^0.12.0"
+    "chess.js": "^0.12.0",
+    "core-js": "^3.16.1",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/polyfill": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/register": "^7.15.3",
+    "@rollup/plugin-node-resolve": "^13.0.4",
     "mocha": "^9.0.3",
     "rollup": "^1.32.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-cpy": "^2.0.1",
     "rollup-plugin-filesize": "^9.1.1",
+    "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-progress": "^1.1.2",
     "rollup-plugin-uglify": "^5.0.2"
