--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chessmovetree",
+  "name": "chesshistory",
   "version": "0.2.1",
-  "description": "",
+  "description": "Chess History is a library that creates chess moves history with variations",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "type": "module",
@@ -22,16 +22,12 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/register": "^7.15.3",
-    "@rollup/plugin-node-resolve": "^13.0.4",
     "mocha": "^9.0.3",
     "rollup": "^1.32.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-cpy": "^2.0.1",
-    "rollup-plugin-filesize": "^9.1.1",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-progress": "^1.1.2",
-    "rollup-plugin-uglify": "^5.0.2"
+    "rollup-plugin-node-resolve": "^5.2.0"
   }
 }
