--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chessmovetree",
+  "name": "chesshistory",
   "version": "0.2.1",
-  "description": "",
+  "description": "Chess History is a library that creates chess moves history with variations",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
   "type": "module",
