--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "chesshistory",
-  "version": "0.2.1",
+  "version": "0.1.1",
   "description": "Chess History is a library that creates chess moves history with variations",
   "main": "lib/index.js",
   "module": "lib/index.esm.js",
+  "homepage": "https://github.com/pouyaSamie/ChessHistory",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pouyaSamie/ChessHistory"
+  },
   "scripts": {
     "test": "mocha  --recursive --require @babel/register",
     "build": "yarn rollup -c"
