--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "https://github.com/pouyaSamie/ChessHistory"
+    "url": "https://github.com/pouyaSamie/ChessHistory.git"
   },
   "scripts": {
     "test": "mocha  --recursive --require @babel/register",
