--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "mocha  --recursive --require @babel/register",
     "build": "yarn rollup -c",
-    "publish": "npm run build && npm publish"
+    "pub": "npm run build && npm publish"
   },
   "author": "pouya.samie@gmail.com",
   "license": "ISC",
